# database-viewer

./: .gitignore  README.md  pyproject.toml  requirements.txt
forms/: column_widget.ui  connection_window.ui  create_conn.ui  error_window.ui  field_widget.ui  main.ui  main_window.ui
src/: connection.py  db_viewer.py  error_window.py  field.py  main.py
src/backend/: connection.py  types.py
src/frontend/: column_widget.py  connection_window.py  db_viewer.py  error_window.py  main_window.py
src/frontend/pyqt/: ui_column_widget.py  ui_connection_window.py  ui_create_conn.py  ui_error.py  ui_error_window.py  ui_field_widget.py  ui_main.py  ui_main_window.py
src/pyqt/: ui_create_conn.py  ui_error.py  ui_field_widget.py  ui_main.py
